Implement Analytics Dashboard: backend summary/daily/top-house endpoints and Flutter chart screen

--- a/apps/mobile_app/pubspec.yaml
+++ b/apps/mobile_app/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   riverpod: ^2.4.9
   shared_preferences: ^2.2.2
   web_socket_channel: ^2.4.4
+  fl_chart: ^0.66.0
 
 dev_dependencies:
   flutter_test:
