Fix user endpoints and database transactions, ensure deterministic seeding, update SHAP explainability schemas, and fix startup scripts.

--- a/apps/ml_engine/requirements.txt
+++ b/apps/ml_engine/requirements.txt
@@ -5,3 +5,8 @@ scikit-learn==1.4.0
 numpy==1.26.4
 requests==2.31.0
 joblib==1.3.2
+pytest==8.0.0
+shap==0.44.1
+gunicorn==21.2.0
+celery==5.3.6
+redis==5.0.1
