--- a/apps/ml_engine/Dockerfile
+++ b/apps/ml_engine/Dockerfile
@@ -16,4 +16,4 @@ RUN mkdir -p models
 
 EXPOSE 8001
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["gunicorn", "main:app", "--workers", "3", "--worker-class", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8001", "--timeout", "120"]
